# internal/delivery/data/request/authReq/auth_request.go
@@ -3,3 +3,8 @@ package authreq
 type GoogleLoginRequest struct {
 	IDToken string `json:"idToken" binding:"required"`
 }
+
+type GoogleOAuthCodeLoginRequest struct {
+	Code        string `json:"code" binding:"required"`
+	RedirectURI string `json:"redirectUri" binding:"required"`
+}
